--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "stream-browserify": "^2.0.2",
     "vm-browserify": "^1.1.0",
     "jsc-android": "^241213.1.0",
+    "react-navigation": "^3.10.2",
+    "react-navigation-redux-helpers": "^3.0.2",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
     "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git#develop"
   },
   "peerDependencies": {
