--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vm-browserify": "^1.1.0",
     "jsc-android": "^216113.0.0",
     "react-navigation": "^3.10.2",
-    "react-native-gesture-handler": "^1.2.1",
+    "react-native-gesture-handler": "^1.3.0",
     "react-navigation-redux-helpers": "^3.0.2",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
@@ -31,7 +31,7 @@
     "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git#develop"
   },
   "peerDependencies": {
-    "react": "^16.8.3",
-    "react-native": "^0.59.8"
+    "react": ">=16.8.3",
+    "react-native": ">=0.59.8"
   }
 }
