--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "events": "^3.0.0",
     "stream-browserify": "^2.0.2",
     "vm-browserify": "^1.1.0",
-    "jsc-android": "^216113.0.0",
     "react-navigation": "^3.11.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation-redux-helpers": "^3.0.2",
@@ -32,6 +31,7 @@
   },
   "peerDependencies": {
     "react": ">=16.8.3",
-    "react-native": ">=0.59.8"
+    "react-native": ">=0.59.8",
+    "jsc-android": "241213.1.0"
   }
 }
