--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "esecubit-react-native-wallet-sdk",
   "version": "1.0.0",
@@ -17,21 +16,22 @@
     "bigi": "^1.4.2",
     "buffer": "^5.2.0",
     "crypto-browserify": "^3.12.0",
+    "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git#develop",
     "events": "^3.0.0",
-    "stream-browserify": "^2.0.2",
-    "vm-browserify": "^1.1.0",
-    "react-navigation": "^3.11.0",
+    "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.0",
     "react-navigation-redux-helpers": "^3.0.2",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
-    "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git#develop"
+    "stream-browserify": "^2.0.2",
+    "vm-browserify": "^1.1.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.3",
-    "react-native": ">=0.59.8",
-    "jsc-android": "241213.1.0"
+    "jsc-android": "241213.1.0",
+    "react": "16.8.3",
+    "react-native": "0.59.8"
   }
 }
