--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esecubit-react-native-wallet-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "SDK For EsecuBit React Native Wallet App",
   "main": "index.js",
   "keywords": [
@@ -18,7 +18,6 @@
     "crypto-browserify": "^3.12.0",
     "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git#develop",
     "events": "^3.0.0",
-    "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.0",
     "react-navigation-redux-helpers": "^3.0.2",
@@ -31,7 +30,6 @@
   },
   "peerDependencies": {
     "jsc-android": "241213.1.0",
-    "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react": "16.8.3"
   }
 }
