--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   "author": "EsecuBit",
   "license": "LGPLv3",
   "dependencies": {
-    "assert": "^1.4.1",
-    "bigdecimal": "^0.6.1",
-    "bigi": "^1.4.2",
-    "buffer": "^5.2.0",
-    "crypto-browserify": "^3.12.0",
+    "assert": "1.4.1",
+    "bigdecimal": "0.6.1",
+    "bigi": "1.4.2",
+    "buffer": "5.2.1",
+    "crypto-browserify": "3.12.0",
     "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git#develop",
-    "events": "^3.0.0",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-navigation": "^3.11.0",
-    "react-navigation-redux-helpers": "^3.0.2",
-    "react-redux": "^5.1.0",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.3.0",
-    "stream-browserify": "^2.0.2",
-    "vm-browserify": "^1.1.0"
+    "events": "3.0.0",
+    "react-native-gesture-handler": "1.3.0",
+    "react-navigation": "3.11.0",
+    "react-navigation-redux-helpers": "3.0.2",
+    "react-redux": "5.1.0",
+    "redux": "4.0.1",
+    "redux-actions": "2.6.5",
+    "redux-thunk": "2.3.0",
+    "stream-browserify": "2.0.2",
+    "vm-browserify": "1.1.0"
   },
   "peerDependencies": {
     "jsc-android": "241213.1.0",
