--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bigi": "1.4.2",
     "buffer": "5.2.1",
     "crypto-browserify": "3.12.0",
-    "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git#develop",
+    "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git",
     "events": "3.0.0",
     "react-native-gesture-handler": "1.3.0",
     "react-navigation-redux-helpers": "3.0.2",
