--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "buffer": "5.2.1",
     "crypto-browserify": "3.12.0",
     "esecubit-wallet-sdk": "git+https://github.com/EsecuBit/EsecuBit-wallet-sdk.git",
+    "esecubit-wallet-i18n": "git+https://github.com/EsecuBit/EsecuBit-wallet-i18n.git",
     "events": "3.0.0",
     "react-native-gesture-handler": "1.3.0",
     "react-navigation-redux-helpers": "3.0.2",
